pkl-core/src/test/files/LanguageSnippetTests/output/errors/invalidBytes4.pcf
res = Bytes(1, 2, 3, 255)
